--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "private": true,
   "packageManager": "pnpm@8.15.5",
   "scripts": {
-    "build": "pnpm run --filter=\"./packages/*\" --parallel build",
+    "build": "pnpm run --filter=\"./{packages,internal}/*\" --parallel build",
+    "clean": "rimraf --glob ./{packages,internal}/*/dist",
     "coverage": "vitest --coverage",
-    "dev": "pnpm run --filter=\"./packages/*\" --parallel dev",
+    "dev": "pnpm run --filter=\"./{packages,internal}/*\" --parallel dev",
     "lint": "eslint .",
     "prepare": "husky",
     "publish": "pnpm build && changeset publish",
@@ -27,10 +28,12 @@
     "nano-staged": "^0.8.0",
     "npm-run-all2": "^6.1.2",
     "prettier": "^3.2.5",
+    "rimraf": "^5.0.5",
     "tsup": "^8.0.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3",
-    "vitest": "^1.4.0"
+    "vitest": "^1.4.0",
+    "vue": "^3.4.21"
   },
   "prettier": "@ntnyq/prettier-config",
   "nano-staged": {
