--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@8.15.5",
+  "packageManager": "pnpm@9.4.0",
   "scripts": {
     "build": "pnpm run --filter=\"./{packages,internal}/*\" --parallel build",
     "clean": "rimraf --glob ./{packages,internal}/*/dist",
@@ -12,28 +12,28 @@
     "lint": "eslint .",
     "prepare": "husky",
     "publish": "pnpm build && changeset publish",
-    "test": "vitest",
+    "test": "vitest --passWithNoTests",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "0.5.0",
-    "@changesets/cli": "2.27.1",
-    "@ntnyq/eslint-config": "^1.21.2",
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.7",
+    "@ntnyq/eslint-config": "^2.5.1",
     "@ntnyq/prettier-config": "^1.21.2",
-    "@types/node": "^20.12.2",
-    "@vitest/coverage-v8": "1.4.0",
-    "@vue/test-utils": "^2.4.5",
-    "eslint": "^8.57.0",
+    "@types/node": "^20.14.10",
+    "@vitest/coverage-v8": "^1.6.0",
+    "@vue/test-utils": "^2.4.6",
+    "eslint": "^9.6.0",
     "husky": "^9.0.11",
     "nano-staged": "^0.8.0",
-    "npm-run-all2": "^6.1.2",
-    "prettier": "^3.2.5",
-    "rimraf": "^5.0.5",
-    "tsup": "^8.0.2",
-    "tsx": "^4.7.1",
-    "typescript": "^5.4.3",
-    "vitest": "^1.4.0",
-    "vue": "^3.4.21"
+    "npm-run-all2": "^6.2.2",
+    "prettier": "^3.3.2",
+    "rimraf": "^5.0.7",
+    "tsup": "^8.1.0",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3",
+    "vitest": "^1.6.0",
+    "vue": "^3.4.31"
   },
   "prettier": "@ntnyq/prettier-config",
   "nano-staged": {
