--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
     "target": "ES2022",
     "lib": ["DOM", "ES2022"],
     "module": "ESNext",
-    "types": ["node"],
-    "esModuleInterop": true,
     "moduleResolution": "Bundler",
+    "types": ["node"],
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true,
-    "resolveJsonModule": true
+    "skipLibCheck": true
   },
   "exclude": ["**/node_modules/**", "**/dist/**"]
 }
