--- a/package.json
+++ b/package.json
@@ -3,40 +3,41 @@
   "type": "module",
   "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@9.6.0",
+  "packageManager": "pnpm@9.12.2",
   "scripts": {
     "build": "pnpm run --filter=\"./{packages,internal}/*\" --parallel build",
     "clean": "rimraf --glob ./{packages,internal}/*/dist",
     "coverage": "vitest --coverage",
     "dev": "pnpm run --filter=\"./{packages,internal}/*\" --parallel dev",
     "lint": "eslint .",
+    "play": "pnpm -C playground run dev",
     "prepare": "husky",
     "publish": "pnpm build && changeset publish",
     "test": "vitest --passWithNoTests",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.7",
-    "@ntnyq/eslint-config": "^2.7.3",
-    "@ntnyq/prettier-config": "^1.21.2",
-    "@types/node": "^20.14.14",
-    "@vitest/coverage-v8": "^2.0.5",
+    "@changesets/changelog-github": "0.5.0",
+    "@changesets/cli": "2.27.1",
+    "@ntnyq/eslint-config": "^3.0.2",
+    "@ntnyq/prettier-config": "^1.21.3",
+    "@types/node": "^22.7.6",
+    "@vitest/coverage-v8": "^2.1.3",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^9.8.0",
-    "husky": "^9.1.4",
+    "eslint": "^9.12.0",
+    "husky": "^9.1.6",
     "nano-staged": "^0.8.0",
-    "npm-run-all2": "^6.2.2",
+    "npm-run-all2": "^6.2.3",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
-    "tsup": "^8.2.4",
-    "tsx": "^4.16.5",
-    "typescript": "^5.5.4",
-    "vitest": "^2.0.5",
-    "vue": "^3.4.35"
+    "tsup": "^8.3.0",
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.3",
+    "vue": "^3.5.12"
   },
   "prettier": "@ntnyq/prettier-config",
   "nano-staged": {
-    "*.{js,ts,vue,md,json,yml,yaml}": "eslint --fix"
+    "*.{js,ts,cjs,mjs,vue,md,json,yml,yaml}": "eslint --fix"
   }
 }
