--- a/playground/package.json
+++ b/playground/package.json
@@ -1,9 +1,20 @@
 {
   "name": "playground",
+  "type": "module",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "build": "vite build",
     "dev": "vite"
+  },
+  "dependencies": {
+    "@unocss/reset": "0.59.0-beta.1",
+    "@vplug/count-to": "workspace:*",
+    "vue": "^3.5.12"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^5.1.4",
+    "unocss": "^0.63.4",
+    "vite": "^5.4.9"
   }
 }
